src/fastcampus/kubenetes/Part3/ch04/05_Ingress/order.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    service: order
    project: snackbar
  namespace: snackbar
spec:
  type: NodePort
  selector:
    service: order
    project: snackbar
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Pod
metadata:
  name: order
  labels:
    service: order
    project: snackbar
  namespace: snackbar
spec:
  containers:
    - env:
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
      image: dlgustn555/order:4.0.0.1
      name: order
      ports:
        - containerPort: 8080
      resources: {}
