src/fastcampus/kubenetes/Part3/ch04/05_Ingress/payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    service: payment
    project: snackbar
  namespace: snackbar
spec:
  type: NodePort
  selector:
    service: payment
    project: snackbar
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    service: payment
    project: snackbar
  namespace: snackbar
spec:
  replicas: 3
  selector:
    matchLabels:
      service: payment
      project: snackbar
  template:
    metadata:
      name: payment
      labels:
        service: payment
        project: snackbar
      namespace: snackbar
    spec:
      containers:
        - env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: HOST_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          image: dlgustn555/payment:4.0.1
          name: payment
          ports:
            - containerPort: 8080
          resources: {}
