src/fastcampus/kubenetes/Part3/ch04/05_Ingress/ingress-multiple-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  labels:
    project: snackbar
  namespace: snackbar
spec:
  defaultBackend:
    service:
      name: payment
      port: 80
  rules:
    - host: order.snackbar.com
      http:
        paths:
          backend:
            service:
              name: order
              port: 80
          path: /order
          pathType: Prefix

    - host: payment.snackbar.com
      http:
        paths:
          backend:
            service:
              name: payment
              port: 80
            path: /payment
            pathType: Prefix
